welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:17: error: not found: type color
def isFacingTrail(c:color):Boolean = {
                    ^SlugSnail:4: error: missing arguments for method isFacingTrail in class SlugSnail;
follow this method with `_' if you want to treat it as a partially applied function
   	if(isFacingTrail==true){
           ^